Changes for 3.0.25rc1

New features:

Bug fixes:
.......PS. [ZBX-15206] fixed deprecated net-snmp attribute (MVekslers)
.......PS. [ZBX-15238] fixed updating nextcheck time in discovery rules to avoid overlaps between discovery executions (asitals)
....I....T [ZBX-8383] updated Tomcat template for compatibility with recent Tomcat versions, fixed constraint error when importing new data.tmpl (kalimulin)
..F....... [ZBX-14606] removed strict-transport-security header from frontend (miks)
A......... [ZBX-14977] fixed creation of unneeded database record if host prototype inventory mode is disabled; fixed validation for host and host prototype inventory mode (miks)
A......... [ZBX-15146] fixed SQL error occurred when too long IP address is attempted to be written in database (miks)

--------------------------------------------------------------------------------
Changes for 3.0.24

3.0.24rc1 was released as 3.0.24 without any changes

--------------------------------------------------------------------------------
Changes for 3.0.24rc1

New features:
....I..... [ZBXNEXT-4841] removed hardcoded location for iconv.h; thanks to Helmut Grohne for the patch (kalimulin)
...G...... [ZBXNEXT-3047] fixed compilation errors on Windows platform with static OpenSSL libraries (Andris, viktors)
...G...PS. [ZBXNEXT-4836] added license information and OpenSSL linking exception to README file, show crypto library version when started with '-V' (Andris)

Bug fixes:
.......PS. [ZBX-14635] fixed rare LLD failures when moving host between groups (kalimulin)
..F....... [ZBX-13719] fixed loss of calc_fnc index in graph edit form (vasilijs)
..F....... [ZBX-13009] fixed percentage calculation on availability reports list page (gcalenko)
.......PS. [ZBX-15132] backported daylight saving related scheduled checks fix from ZBX-12965 (wiper)
...G...... [ZBX-14899] fixed wrong net.tcp.listen values on obsolete Linux systems (kalimulin)