@@ -3,6 +3,7 @@ Changes for 3.0.25rc1
 New features:
 
 Bug fixes:
+...G...... [ZBX-15260] improved warning message when logrt item fails to find a log file (asitals)
 .......PS. [ZBX-15206] fixed deprecated net-snmp attribute (MVekslers)
 .......PS. [ZBX-15238] fixed updating nextcheck time in discovery rules to avoid overlaps between discovery executions (asitals)
 ....I....T [ZBX-8383] updated Tomcat template for compatibility with recent Tomcat versions, fixed constraint error when importing new data.tmpl (kalimulin)
